Fix spacing on summary page

--- a/src/app/signalen/_components/SummaryDescriptionList/summary-description-list.css
+++ b/src/app/signalen/_components/SummaryDescriptionList/summary-description-list.css
@@ -2,7 +2,6 @@
   color: var(--ams-description-list-color);
   display: grid;
   font-family: var(--ams-description-list-font-family);
-  gap: var(--ams-description-list-gap);
   line-height: var(--ams-description-list-line-height);
   box-sizing: border-box;
   margin-block: 0;
@@ -21,10 +20,10 @@
 
 .ams-summary-description-list__details-container {
   display: grid;
-  gap: 0.5rem;
+  row-gap: 0.25rem;
 
   @media screen and (min-width: 36rem) {
-    gap: 2rem;
+    column-gap: 2rem;
     grid-template-columns: 2fr 1fr;
   }
 }
